--- a/src/scripts/Cheesy-Plots.ipynb
+++ b/src/scripts/Cheesy-Plots.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f868ff39",
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
-    "from dataclasses import dataclass, field\n",
     "from functools import partial\n",
     "\n",
-    "import aeolus\n",
     "import iris\n",
     "import matplotlib.colors as mcol\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,15 +21,13 @@
     "    zonal_mean,\n",
     ")\n",
     "from aeolus.coord import interp_cube_from_height_to_pressure_levels, regrid_3d\n",
-    "from aeolus.lfric import add_equally_spaced_height_coord, fix_time_coord, load_lfric_raw\n",
-    "from aeolus.model import lfric, um\n",
+    "from aeolus.lfric import load_lfric_raw\n",
+    "from aeolus.model import lfric\n",
     "from aeolus.plot import figsave, tex2cf_units, unit_format\n",
-    "from common import EXPERIMENTS\n",
+    "from common import EXPERIMENTS, MODELS, Diag, lfric_callback_uniform_height\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"iris\")\n",
-    "iris.FUTURE.date_microseconds = True\n",
-    "\n",
-    "plt.rcParams[\"mathtext.default\"] = \"regular\""
+    "iris.FUTURE.date_microseconds = True"
    ]
   },
   {
@@ -46,113 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4b7da7b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from aeolus.coord import ensure_bounds\n",
-    "from iris.exceptions import CoordinateNotFoundError as CoNotFound\n",
-    "from iris.util import promote_aux_coord_to_dim_coord\n",
-    "\n",
-    "\n",
-    "def replace_z_coord(cube, remove_level_coord=False, inplace=False, model=lfric):\n",
-    "    \"\"\"\n",
-    "    Replace levels coordinate with level_height.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    cube: iris.cube.Cube\n",
-    "        Input cube.\n",
-    "    model: aeolus.model.Model, optional\n",
-    "        Model class with relevant coordinate names.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    iris.cube.Cube\n",
-    "        Copy of the input cube with a new vertical coordinate.\n",
-    "    \"\"\"\n",
-    "    if inplace:\n",
-    "        new_cube = cube\n",
-    "    else:\n",
-    "        new_cube = cube.copy()\n",
-    "    promote_aux_coord_to_dim_coord(new_cube, model.z)\n",
-    "    # Reset bounds for the new z coordinate\n",
-    "    new_cube.coord(model.z).bounds = None\n",
-    "    ensure_bounds(new_cube, coords=[model.z])\n",
-    "    # Remove the old levels coordinate\n",
-    "    if remove_level_coord:\n",
-    "        lev_coords = [\n",
-    "            i.name() for i in new_cube.coords() if i.name().endswith(\"_levels\")\n",
-    "        ]\n",
-    "        for coord in lev_coords:\n",
-    "            try:\n",
-    "                new_cube.remove_coord(coord)\n",
-    "            except CoNotFound:\n",
-    "                pass\n",
-    "    if not inplace:\n",
-    "        return new_cube"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a0133faa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def combi_callback(cube, field, filename, model_top_height):\n",
-    "    \"\"\"Callback function to apply multiple transformations.\"\"\"\n",
-    "    fix_time_coord(cube, field, filename)\n",
-    "    add_equally_spaced_height_coord(\n",
-    "        cube, field, filename, model_top_height=model_top_height\n",
-    "    )\n",
-    "    try:\n",
-    "        replace_z_coord(cube, inplace=True, remove_level_coord=True, model=lfric)\n",
-    "    except iris.exceptions.CoordinateNotFoundError:\n",
-    "        pass\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e7a43d6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class BenchModel:\n",
-    "    \"\"\"Model details.\"\"\"\n",
-    "\n",
-    "    title: str\n",
-    "    kw_plt: dict = field(default_factory=dict)\n",
-    "    model: aeolus.model.base.Model = lfric\n",
-    "\n",
-    "\n",
-    "MODELS = {\n",
-    "    \"lfric\": BenchModel(\n",
-    "        model=lfric,\n",
-    "        title=\"LFRic\",\n",
-    "        kw_plt={\n",
-    "            \"linestyle\": \"-\",\n",
-    "            \"linewidth\": 1.25,\n",
-    "        },\n",
-    "    ),\n",
-    "    \"um\": BenchModel(\n",
-    "        model=um,\n",
-    "        title=\"UM\",\n",
-    "        kw_plt={\n",
-    "            \"linestyle\": \"--\",\n",
-    "            \"linewidth\": 0.75,\n",
-    "            \"dash_capstyle\": \"round\",\n",
-    "        },\n",
-    "    ),\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c214bd19",
    "metadata": {},
    "outputs": [
@@ -188,7 +78,7 @@
     "    (paths.data_work / model_name / exp_label).glob(\"lfric_diag_latlon*.nc\")\n",
     ")[-100:]\n",
     "ds_all[model_name] = load_lfric_raw(\n",
-    "    fnames, callback=partial(combi_callback, model_top_height=4e6)\n",
+    "    fnames, callback=partial(lfric_callback_uniform_height, model_top_height=4e6)\n",
     ")\n",
     "print(ds_all[model_name])\n",
     "print()\n",
@@ -218,23 +108,6 @@
     "ds_all[\"um\"].extract_cube(\n",
     "    \"tendency_of_air_temperature_due_to_shortwave_heating\"\n",
     ").rename(\"shortwave_heating_rate\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "6c472f17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class Diag:\n",
-    "    \"\"\"Diagnostics to be plotted.\"\"\"\n",
-    "\n",
-    "    title: str\n",
-    "    units: str\n",
-    "    recipe: callable\n",
-    "    kw_plt: dict = field(default_factory=dict)"
    ]
   },
   {
